2008-07-29  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-folder-tree.c: Kill a compilation warning.

2008-07-28  Lucian Langa  <lucilanga@gnome.org>

	* mail/mail-config.glade:
	Corrected string "Prompt on sending HTML.."

2008-07-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #543532

	* em-folder-tree-model.c: (em_folder_tree_model_remove_store_info):
	Let free memory when we are done with it, not before.

2008-07-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #256540

	* mail-dialogs.glade: (message_security_dialog):
	Do not use GtkNotebook with only one tab.

2008-07-28  Lucian Langa  <lucilanga@gnome.org>

	* mail/mail-config.glade:
	** See bug #504417: Preferences windows
	cut off

2008-07-28 Jeff Cai <jeff.cai@sun.com> 

	* em-migrate.c: (migrate_to_db):
	* em-network-prefs.c: (notify_proxy_type_changed),
	(widget_entry_changed_cb):
    Use G_GNUC_PRETTY_FUNCTION instead of __PRETTY__FUNCTION

2008-07-27  Lucian Langa <lucilanga@gnome.org>

	* mail/em-event.h (struct _EMEventTargetCustomIcon):
	* mail/em-event.c (em_event_target_new_custom_icon):
	* mail/em-folder-tree.c (render_pixbuf):
	** See bug #544969: Added the hook for folder
	custom icon.

2008-07-28  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #543411

	* mail/em-folder-tree-model.c: Dont load known folders.
	* mail/em-folder-tree.c: Move iter to the last entry.

2008-07-25  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-folder-browser.c: Make show unread/etc work well.

2008-07-24  Sankar P  <psankar@novell.com>

	* em-folder-browser.c (get_view_query):
	Search by Labels.

2008-07-24  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-folder-browser.c: Revert Sankar's search hacks.

2008-07-22  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #544022

	* e-searching-tokenizer.c: (dump_trie):
	Define function only when required. (Compiler warning cleanup.)

2008-07-21  Tor Lillqvist  <tml@novell.com>
